add auth me
